2008-07-06 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/syncdir.c: hash filenames of tracks to reduce overhead
          when syncing parts of large repositories. Thanks to Clarke
          Brunsdon for the initial patch.

	* src/file.c: also update mtime of updated tracks.


2008-07-05 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_coverart.c:

	  Normalized indentation (original editor was mis-configured).


2008-07-05 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/misc_conversion.c (ST_to_T)
	  src/display_sorttabs.c (st_set_string_compare_func):

	  be more restrictive concerning ST_CAT_SPECIAL (assertion)

	  src/display_coverart: white space

	  src/file.c: added comments


2008-07-05 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file.c: allow absolute paths in coverart
          template. Thanks to J.D. Laub for the patch.


2008-07-05 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_itdb.c
	  src/display_playlists.c: some work on white space.


2008-07-05 Jorg Schuler <jcsjcs at users.sourceforge.net>

	  src/display.h
	  src/file_itunesdb.c
	  src/repository.c
	  src/display_itdb.c
	  src/display_playlists.c
	  src/context_menus.c
	  src/display_photo.c
	  src/display_photo.h: get rid of Photo "Playlist" and create a
	  "Photo" object in the Playlist view. This also solves a problem
	  with the population of smart playlists.

2008-06-29 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_photo.c: fix possible memory leak. Thanks to Mike
	  Heffner.

	* src/display.c
	  src/display_photo.c
	  src/details.c
	  src/fetchcover.c: replace deprecated gdk_pixbuf_unref() with
	  g_object_unref().

2008-06-28 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_itunesdb.c
	  src/display_photo.c
	  src/display_photo.h: don't display error message about
	  non-available photodb if iPod does not support photos.

2008-05-31  Todd Zullinger <tmzullinger at users.sourceforge.net>
